--- a/ansible/02_install_k3s_master.yml
+++ b/ansible/02_install_k3s_master.yml
@@ -2,7 +2,7 @@
 - name: Setup k3s master
   hosts: master
   vars:
-    ansible_ssh_private_key_file: ./workshop
+    ansible_ssh_private_key_file: ./k3s_workshop
     ansible_user: root
     ansible_ssh_extra_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
 
